WID-121: Improve bucket entries visibility and fix sync issue between input and BucketFileBrowser

--- a/style/base.css
+++ b/style/base.css
@@ -271,3 +271,9 @@
 .bucket-ShareLink:hover {
   text-decoration: underline;
 }
+
+.scrollableY {
+  max-height: 70vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
